added a few new implementations on the api layer
